5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1637_869.log
== TEST (2019-04-09 10:49:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
 valor= ((preco*0.05) / 100)
	
if(valor >= 200):
	print(round(valor, 2))
else:
	print(preco)
-- ERROR:
File "XXXX", line 5
    valor= ((preco*0.05) / 100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:49:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
 valor = ((preco*5) / 100)
	
if(valor >= 200):
	print(round(valor, 2))
else:
	print(preco)
-- ERROR:
File "XXXX", line 5
    valor = ((preco*5) / 100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:49:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
 valor = ((preco*0.05) / 100)
	
if(valor >= 200):
	print(round(valor, 2))
else:
	print(preco)
-- ERROR:
File "XXXX", line 5
    valor = ((preco*0.05) / 100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:52:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
 valor = ((preco*0.05) -preco)
	
if(valor >= 200):
	print(round(valor, 2))
else:
	print(preco)
-- ERROR:
File "XXXX", line 5
    valor = ((preco*0.05) -preco)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:52:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
 valor = (preco-(preco*0.05))
	
if(valor >= 200):
	print(round(valor, 2))
else:
	print(preco)
-- ERROR:
File "XXXX", line 5
    valor = (preco-(preco*0.05))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:53:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
 valor = (preco-(preco*0.05))
	
if(valor >= 200):
	print(round(valor, 2))
else:
	print(round(preco,2))
-- ERROR:
File "XXXX", line 5
    valor = (preco-(preco*0.05))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:54:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
 valor = ((preco*5) / 100)
	
if(valor >= 200):
	print(round(valor, 2))
else:
	print(round(preco,2))
-- ERROR:
File "XXXX", line 5
    valor = ((preco*5) / 100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:54:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
 valor = preco-((preco * 5) / 100)
	
if(valor >= 200):
	print(round(valor, 2))
else:
	print(round(preco,2))
-- ERROR:
File "XXXX", line 5
    valor = preco-((preco * 5) / 100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:55:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
 valor = preco-((preco * 5) / 100)
	
if(preco >= 200):
	print(round(preco, 2))
else:
	print(round(preco,2))
-- ERROR:
File "XXXX", line 5
    valor = preco-((preco * 5) / 100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:56:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
 valor = preco-((preco * 5) / 100)
	
if(preco >= 200):
	print(round(valor, 2))
else:
	print(round(preco,2))
-- ERROR:
File "XXXX", line 5
    valor = preco-((preco * 5) / 100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:56:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
 valor = preco-((preco * 5) / 100)
	
if(preco >= 200):
	print(round(preco-valor, 2))
else:
	print(round(preco,2))
-- ERROR:
File "XXXX", line 5
    valor = preco-((preco * 5) / 100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:58:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
 valor = preco-((preco * 5) / 100)
	
if(preco >= 200):
	total=valor
else:
	total=preco
	
print(round(total,2))	
-- ERROR:
File "XXXX", line 5
    valor = preco-((preco * 5) / 100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:58:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
valor = preco-((preco * 5) / 100)
	
if(preco >= 200):
	total=valor
else:
	total=preco
	
print(round(total,2))	
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:58:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
valor = preco-((preco * 5) / 100)
	
if(preco >= 200):
	total=valor
else:
	total=preco
	
print(round(total,2))	
-- EXECUTION TIME:
0.133441
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:00:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
valor = preco-((preco * 0.05/ 100)
	
if(preco >= 200):
	print(round(preco-valor,2))
else:
	print(round(preco,2))
	
	
-- ERROR:
File "XXXX", line 7
    if(preco >= 200):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:01:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
valor= preco-((preco * 0.05)/ 100)
	
if(preco >= 200):
	print(round(preco-valor,2))
else:
	print(round(preco,2))
	
	
-- OUTPUT:
0.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:23:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
valor= preco-((preco * 0.05)/ 100)
	
if(preco >= 200):
	print(round(preco-valor,2))
else:
	print(round(preco,2))
	
	
-- EXECUTION TIME:
0.183888
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
compra:0.1
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
compra:0.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:50:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
valor= preco-((preco * 0.05)/ 100)
	
if(preco >= 200):
	print(round(preco-valor,2))
else:
	print(round(preco,2))
	
	
-- OUTPUT:
0.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:51:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
valor= preco-((preco * 0.05)/ 100)
	
if(preco >= 200):
	print(round(valor-preco,2))
else:
	print(round(preco,2))
	
	
-- OUTPUT:
-0.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:52:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
valor= preco-(preco * 0.05/ 100)
	
if(preco >= 200):
	print(round(preco-valor,2))
else:
	print(round(preco,2))
	
	
-- OUTPUT:
0.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:55:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
valor= preco-(preco * (0.05/ 100))
	
if(preco >= 200):
	print(round(preco-valor,2))
else:
	print(round(preco,2))
	
	
-- OUTPUT:
0.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:55:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
valor= preco-(preco * (5/ 100))
	
if(preco >= 200):
	print(round(preco-valor,2))
else:
	print(round(preco,2))
	
	
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:57:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
valor= preco*0.05
	
if(preco >= 200):
	print(round(preco-valor,2))
else:
	print(round(preco,2))
	
	
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:57:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
valor= preco*0.05
	
if(preco >= 200):
	print(round(preco-valor,2))
else:
	print(round(preco,2))
	
	
-- EXECUTION TIME:
0.19374
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
